--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPeinoA4Uj6pEiiAeRCRklDjpe17F7ybg&libraries=places">
+</script>
 </head>
 
 <body>
